--- a/config/ergonaut_one.conf
+++ b/config/ergonaut_one.conf
@@ -1,17 +1,12 @@
-# Copyright (c) 2020 The ZMK Contributors
-# SPDX-License-Identifier: MIT
-
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_MAX_CONN=6
 CONFIG_BT_MAX_PAIRED=6
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-CONFIG_ZMK_IDLE_TIMEOUT=900000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
-CONFIG_ZMK_SLEEP=y
-
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=300
-
-CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=y
-
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_IDLE_TIMEOUT=900000
 CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_KEYBOARD_NAME="Ergonaut One"
+CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_USB=y
